--- a/scss/components/_time-toggle.scss
+++ b/scss/components/_time-toggle.scss
@@ -7,15 +7,16 @@
 .header__time-toggle {
   display: flex;
   justify-content: space-around;
-  margin: 1rem;
+  margin: 0rem 1rem 1.5rem;
   width: 100%;
+  height: 115px;
 
   @include mq($desktop-width, up) {
     flex-direction: row;
     flex-wrap: wrap;
     align-content: space-between;
     margin-left: 1.8rem;
-    align-self: stretch;
+    align-self: flex-end;
   }
 }
 
